tests/sksl/errors/SwizzleMatrix.dsl.glsl
### Compilation failed:

error: type 'float2x2' does not have a field named 'y'

1 error
